{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 255,
  "lineage": "6822ca14-66ef-7903-31d0-6c0bfa0db76b",
  "resources": [
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/frontendIPConfigurations/Frontend_ip",
                "load_balancer_rules": [
                  "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/loadBalancingRules/lb_rule"
                ],
                "name": "Frontend_ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/publicIPAddresses/Frontend_ip"
              }
            ],
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer",
            "location": "northeurope",
            "name": "load_balancer",
            "resource_group_name": "Ajit-Test-Test-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.LinuxVirtualMachine.azurerm_linux_virtual_machine.Linux-VM",
            "module.LoadBalancer.azurerm_public_ip.Frontend_ip",
            "module.NetworkInterface.azurerm_network_interface.example",
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/backendAddressPools/backend_pool",
            "loadbalancer_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer",
            "name": "backend_pool"
          },
          "dependencies": [
            "module.LinuxVirtualMachine.azurerm_linux_virtual_machine.Linux-VM",
            "module.LoadBalancer.azurerm_lb.load_balancer",
            "module.LoadBalancer.azurerm_public_ip.Frontend_ip",
            "module.NetworkInterface.azurerm_network_interface.example",
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "backend_pool_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/backendAddressPools/backend_pool",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/backendAddressPools/backend_pool/addresses/backend_pool_address0",
            "ip_address": "10.0.0.4",
            "name": "backend_pool_address0",
            "virtual_network_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet"
          },
          "dependencies": [
            "module.LinuxVirtualMachine.azurerm_linux_virtual_machine.Linux-VM",
            "module.LoadBalancer.azurerm_lb.load_balancer",
            "module.LoadBalancer.azurerm_lb_backend_address_pool.backend_pool",
            "module.LoadBalancer.azurerm_public_ip.Frontend_ip",
            "module.NetworkInterface.azurerm_network_interface.example",
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/backendAddressPools/backend_pool",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/backendAddressPools/backend_pool/addresses/backend_pool_address1",
            "ip_address": "10.0.1.4",
            "name": "backend_pool_address1",
            "virtual_network_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet"
          },
          "dependencies": [
            "module.LinuxVirtualMachine.azurerm_linux_virtual_machine.Linux-VM",
            "module.LoadBalancer.azurerm_lb.load_balancer",
            "module.LoadBalancer.azurerm_lb_backend_address_pool.backend_pool",
            "module.LoadBalancer.azurerm_public_ip.Frontend_ip",
            "module.NetworkInterface.azurerm_network_interface.example",
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/probes/http-allow",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer",
            "name": "http-allow",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.LinuxVirtualMachine.azurerm_linux_virtual_machine.Linux-VM",
            "module.LoadBalancer.azurerm_lb.load_balancer",
            "module.LoadBalancer.azurerm_lb_backend_address_pool.backend_pool",
            "module.LoadBalancer.azurerm_lb_backend_address_pool_address.backend_pool_address",
            "module.LoadBalancer.azurerm_public_ip.Frontend_ip",
            "module.NetworkInterface.azurerm_network_interface.example",
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/backendAddressPools/backend_pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/frontendIPConfigurations/Frontend_ip",
            "frontend_ip_configuration_name": "Frontend_ip",
            "frontend_port": 80,
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/loadBalancingRules/lb_rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer",
            "name": "lb_rule",
            "probe_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/loadBalancers/load_balancer/probes/http-allow",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.LinuxVirtualMachine.azurerm_linux_virtual_machine.Linux-VM",
            "module.LoadBalancer.azurerm_lb.load_balancer",
            "module.LoadBalancer.azurerm_lb_backend_address_pool.backend_pool",
            "module.LoadBalancer.azurerm_lb_backend_address_pool_address.backend_pool_address",
            "module.LoadBalancer.azurerm_lb_probe.probe",
            "module.LoadBalancer.azurerm_public_ip.Frontend_ip",
            "module.NetworkInterface.azurerm_network_interface.example",
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Frontend_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/publicIPAddresses/Frontend_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.166.36.84",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "Frontend_ip",
            "resource_group_name": "Ajit-Test-Test-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.LinuxVirtualMachine.azurerm_linux_virtual_machine.Linux-VM",
            "module.NetworkInterface.azurerm_network_interface.example",
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkSecurityGroups/Ajit-NSG-Test",
            "location": "northeurope",
            "name": "Ajit-NSG-Test",
            "resource_group_name": "Ajit-Test-Test-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_ssh",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_https",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Allow_http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkSecurityGroups/Ajit-NSG-Test/securityRules/Allow_http",
            "name": "Allow_http",
            "network_security_group_name": "Ajit-NSG-Test",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Ajit-Test-Test-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NSG.azurerm_network_security_group.NSG",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "Allow_https",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkSecurityGroups/Ajit-NSG-Test/securityRules/Allow_https",
            "name": "Allow_https",
            "network_security_group_name": "Ajit-NSG-Test",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Ajit-Test-Test-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NSG.azurerm_network_security_group.NSG",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "Allow_ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkSecurityGroups/Ajit-NSG-Test/securityRules/Allow_ssh",
            "name": "Allow_ssh",
            "network_security_group_name": "Ajit-NSG-Test",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "Ajit-Test-Test-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NSG.azurerm_network_security_group.NSG",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg_linking",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test1",
            "network_security_group_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkSecurityGroups/Ajit-NSG-Test",
            "subnet_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test1"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.NSG",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test2",
            "network_security_group_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkSecurityGroups/Ajit-NSG-Test",
            "subnet_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test2"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.NSG",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.NetworkInterface",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkInterfaces/Ajit-NIC-Test-1",
            "internal_domain_name_suffix": "w21bjkoekpbepi4jt5tsyci5re.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/publicIPAddresses/Ajit-pip-Test-1",
                "subnet_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "7C-1E-52-37-A2-3E",
            "name": "Ajit-NIC-Test-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "Ajit-Test-Test-RG",
            "virtual_machine_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Compute/virtualMachines/AjitLinuxTestVm1"
          },
          "dependencies": [
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkInterfaces/Ajit-NIC-Test-2",
            "internal_domain_name_suffix": "w21bjkoekpbepi4jt5tsyci5re.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/publicIPAddresses/Ajit-pip-Test-2",
                "subnet_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-22-48-A0-0C-2C",
            "name": "Ajit-NIC-Test-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Ajit-Test-Test-RG",
            "virtual_machine_id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Compute/virtualMachines/AjitLinuxTestVm2"
          },
          "dependencies": [
            "module.PublicIP.azurerm_public_ip.public_ip",
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.Subnet.azurerm_subnet.subnet",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.PublicIP",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/publicIPAddresses/Ajit-pip-Test-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "98.71.72.123",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "Ajit-pip-Test-1",
            "resource_group_name": "Ajit-Test-Test-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.ResourceGroup.azurerm_resource_group.apprg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/publicIPAddresses/Ajit-pip-Test-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "68.219.225.119",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "Ajit-pip-Test-2",
            "resource_group_name": "Ajit-Test-Test-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.ResourceGroup.azurerm_resource_group.apprg"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test1",
            "name": "Subnet-Test1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Ajit-Test-Test-RG",
            "virtual_network_name": "Ajit-Test-Vnet"
          },
          "dependencies": [
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test2",
            "name": "Subnet-Test2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Ajit-Test-Test-RG",
            "virtual_network_name": "Ajit-Test-Vnet"
          },
          "dependencies": [
            "module.ResourceGroup.azurerm_resource_group.apprg",
            "module.VirtualNetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.VirtualNetwork",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a91436b7-53c4-47c2-a3c9-9fe72c091f8c",
            "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet",
            "location": "northeurope",
            "name": "Ajit-Test-Vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Ajit-Test-Test-RG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test1",
                "name": "Subnet-Test1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkSecurityGroups/Ajit-NSG-Test"
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/virtualNetworks/Ajit-Test-Vnet/subnets/Subnet-Test2",
                "name": "Subnet-Test2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/9c9354de-cfe5-4c27-9c40-e6faadf58ed2/resourceGroups/Ajit-Test-Test-RG/providers/Microsoft.Network/networkSecurityGroups/Ajit-NSG-Test"
              }
            ]
          },
          "dependencies": [
            "module.ResourceGroup.azurerm_resource_group.apprg"
          ]
        }
      ]
    }
  ]
}